# exhentai-manga-manager

./: .gitignore  CHANGELOG.md  RECENT_CHANGES.md  index.html  index.js  package-lock.json  package.json  preload.js  vite.config.mjs
docs/specs/: 2026-06-26-novel-extension-design.md
fileLoader/: archive.js  folder.js  index.js  utils.js  zip.js
manga_reader/: Cargo.toml  README.md  build.bat
manga_reader/src/: main.rs
modules/: database.js  init_folder_setting.js  novel_database.js
novel_loader/: edgeTts.js  epub.js  filelist.js  index.js  txt.js
public/fonts/: fonts.css
src/: App.vue  main.js  pinia.js  utils.js
src/components/: BookCard.vue  BookDetailDialog.vue  CoverCropDialog.vue  EditView.vue  FolderTree.vue  InternalViewer.vue  Setting.vue  TagGraph.vue  TagList.vue
src/locales/: en-US.json  zh-CN.json  zh-TW.json
src/novel/components/: NovelCard.vue  NovelReader.vue  NovelReaderMonaco.vue  ReaderSettings.vue
src/novel/stores/: novel.js
src/novel/utils/: chapter-detector.js  colorizer.js  readerDisplayPipeline.js  text-format.js  voiceSegments.js  yieldToUi.js
src/novel/views/: NovelLibrary.vue
src/services/: appCache.js
web/: index.html
