[package]
name = "manga_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
glob = "0.3"
rfd = "0.15"
zip = "8.1.0"
tempfile = "3.26.0"
serde = { version = "1.0.228", features = ["derive"] }
eframe = { version = "0.32.3", features = ["persistence"] }
sevenz-rust = "0.6.1"
unrar = "0.5.8"
egui_extras = { version = "0.32.3", features = ["all_loaders"] }

[profile.release]
opt-level = 3
lto = true
